--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,11 +1,11 @@
 <section class="page-intro">
   <h1>Sandra Cardamone</h1>
 
-  <%= image_tag "sandra-clown.webp", alt: "Clownschule Confetti über Sandra", title: "Clownschule Confetti über Sandra",
+  <%= image_tag "sandra-clown-rund.webp", alt: "Clownschule Confetti über Sandra", title: "Clownschule Confetti über Sandra",
                 class: "img-fluid float-end shadow-sm" %>
   <p class="lead">Sandra Cardamone und Clown Confetti</p>
   <p>
-    Ich habe diesen besonderen Kurs ins Leben gerufen, weil Clown sein Spass macht!!!
+    Ich habe diese besonderen Kurse ins Leben gerufen, weil Clown sein Spass macht!!!
   </p>
   <p>
     Mich als Clown auszudücken befreit und erfreut mich auf eine tiefe und entzückende Weise. Meine professionellen
@@ -74,7 +74,7 @@
           <p><%= link_to 'www.mamakraftplatz.de', 'https://www.mamakraftplatz.de',
                          target: '_blank', class: 'link-primary' %></p>
           <p class="small">
-            <strong>Themen:</strong> Mama in Alltag • Mama mit Kindern •
+            <strong>Themen:</strong> Mama im Alltag • Mama mit Kindern •
             Vitalität verbessern • Dein Mindset
           </p>
         </div>
@@ -94,7 +94,7 @@
         <h3>Clown Confetti und Signore Confusione...</h3>
         <p>
           Nach meinem Online-Basiskurs "Entdecke den Clown in Dir" habe ich ein Jahr später
-          den nagelneuen Online Kurs <%= link_to 'Entdecke den Clown in Dir', clownschule_online_path(anchor: "clown-entdecken") %>
+          den nagelneuen Online Kurs <%= link_to 'Entdecke den KlinikClown in Dir', clownschule_online_path(anchor: "klinik-clown") %>
           ins Leben gerufen.
         </p>
         <p>
