--- a/app/assets/stylesheets/_workshops.scss
+++ b/app/assets/stylesheets/_workshops.scss
@@ -280,6 +280,7 @@
 
   &__header-image {
     width: 100%;
+    max-height: 450px;
     min-height: 300px;
     object-fit: cover;
     border-radius: var(--radius-md);
